# pipinfo

./: README.md  pyproject.toml
